--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -170,6 +170,8 @@ section.project {
   justify-content: center;
   align-self: center;
   width: 80%;
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
 }
 
 section.project>p {
