--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -37,7 +37,8 @@ h2{
 }
 
 .divider {
-  border: solid 1px rgba(var(--accent-color), 0.4)
+  border: solid 1px rgba(var(--accent-color), 0.4);
+  width: 100%;
 }
 
 :root {
