--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -35,7 +35,7 @@ html {
   font-style: normal;
   font-display: swap;
   /*When using swap as font-display, the browser will render the text with the fallback font and once it loads Jost, it'll swap over to it. Makes the site feel faster*/
-  src: url(fonts/SevenSegment.ttf);
+  src: url(fonts/SevenSegment.otf);
 }
 
 h2{
