Fixed some large image issues
Fixed issues which arouse when the JS would only be provided with a large image and no small image

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1697,7 +1697,7 @@ font-size: large;
   }
 
   #activityName, #activityState, #activityDetails, #activityTime, #timeremaning{
-    text-align: center;
+    text-align: left;
   }
 
   menu.navWrapperMobile {
