--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1564,9 +1564,9 @@ h1{
   margin-left: 32px;
 }
 
-#serverJoinBedrock{
+/* #serverJoinBedrock{
 
-}
+} */
 
 #serverJoinBedrock>div.title{
   background-color: rgb(228, 228, 228);
