--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,7 +5,7 @@ html {
 @media (prefers-color-scheme: light) {
   :root {
     --background: #f1f1f1;
-    --text: rgb(255, 255, 255);
+    --text: rgb(0, 0, 0);
     --subtitle: rgb(3, 3, 3);
     --project: rgb(88, 88, 88);
   }
@@ -1288,6 +1288,7 @@ div#discord{
   padding: 8px;
   border-radius: 12px;
   margin: 12px;
+  color: var(--text-color);
 }
 
 .discordPFP {border-radius: 10px;}
