--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1661,6 +1661,12 @@ font-size: large;
   border-radius: 12px;
 }
 
+div.projectStuff>iframe{
+  min-width: 560px;
+  min-height: 315px;
+  aspect-ratio: 16 / 9;
+}
+
 @keyframes fling {
   0% {
     transform: scale(.7);
@@ -1751,5 +1757,11 @@ font-size: large;
   ul.cvstuff>li>select, ul.cvstuff>li>input, ul.cvstuff>li>textarea{
     width: 100% !important;
     text-align: center !important;
+  }
+  div.projectStuff>iframe{
+    min-width: unset;
+    min-height: unset;
+    width: 100%;
+    height: 100%;
   }
 }
