--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -76,6 +76,11 @@ html {
   src: url(fonts/SevenSegment.otf);
 }
 
+*{
+  transition: color .2s;
+  transition: background-color .2s;
+}
+
 h2{
   font-size: 1em;
   font-family: Jost, sans-serif;
@@ -681,7 +686,7 @@ p.titleEmail {
   align-items: center;
   flex-direction: column;
   background-color: #121212;
-  background-color: rgba(18, 18, 18);
+  background-color: var(--background-color);
   padding: 12px;
   margin: 12px;
   border-radius: 12px;
@@ -691,7 +696,7 @@ p.titleEmail {
 .emailModalText {
   padding: 12px;
   background-color: #121212;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(var(--accent-color), 0.2);
   border-radius: 12px;
   margin: 12px;
 }
@@ -711,6 +716,7 @@ p.titleEmail {
 
 .buttonsEmail {
   background-color: #191919;
+  background-color: rgba(var(--accent-color),0.2);
   display: flex;
   flex-direction: row;
   justify-content: center;
