added uppercase font option

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1644,6 +1644,14 @@ div.projectStuff>iframe{
  min-width: 120px;
 }
 
+.uppercaseText, .uppercaseTextLabel{
+  text-transform: uppercase;
+}
+
+label{
+  cursor: pointer;
+}
+
 
 @keyframes fling {
   0% {
