--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1221,6 +1221,7 @@ option {
 option, select {
   text-align: center;
   white-space: nowrap;
+  align-items: center;
 }
 
 /* If targeting with a class */
