--- a/src/styles/lanyard.css
+++ b/src/styles/lanyard.css
@@ -33,7 +33,7 @@
     color: white;
   }
   
-  #loadedLandyard{
+  #loadedLanyard{
     display: none;
     text-align: center;
     flex-direction: column;
@@ -44,7 +44,7 @@
     margin-top: 12px;
   }
   
-  #loadedLandyard>p, #discordStatus, #activities{
+  #loadedLanyard>p, #discordStatus, #activities{
     display: inline;
     text-align: center;
     color: rgb(188, 188, 188);
